--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </div>
 
 <!-- Footer -->
-<footer class="container-fluid bg-4 text-center">
+<footer class="bg-4"> <!<!-- container-fluid bg-4 text-center -->
   <p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p> 
 </footer>
 
