--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ function myFunction() {
       </button>
       <a class="navbar-brand" href="https://www.w3schools.com/bootstrap/bird.jpg">Me</a>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
+    <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">WHO</a></li>
         <li><a href="#">WHAT</a></li>
