--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ function myFunction() {
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">WHO</a></li>
-            <li><a href="#">WHAT</a></li>
-            <li><a href="#">WHERE</a></li>
+            <li><a href="javascript:void(0)">WHO</a></li>
+            <li><a href="javascript:void(0)">WHAT</a></li>
+            <li><a href="javascript:void(0)">WHERE</a></li>
           </ul>
         </div>
       </div>
