--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@ function myFunction() {
 }
 </script>
 <!-- Navbar -->
-<div id="navbar">
+<!--<div id="navbar">-->
     <nav class="navbar navbar-default">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <div class="navbar-header" id="myNavbar"  >
+<!--          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>                        
-          </button>
+          </button>-->
           <a class="navbar-brand" href="https://www.w3schools.com/bootstrap/bird.jpg">Me</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
@@ -53,7 +53,7 @@ function myFunction() {
         </div>
       </div>
     </nav>
-</div>
+<!--</div>-->
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Who Am I?</h3>
