--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ function myFunction() {
     <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header" id="myNavbar"  >
-<!--          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>                        
-          </button>-->
+          </button>
           <a class="navbar-brand" href="https://www.w3schools.com/bootstrap/bird.jpg">Me</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
