--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ function myFunction() {
     </nav>
 </div>
 <!-- First Container -->
-<div id="content">
+<div class="content" id="content">
     <div class="container-fluid bg-1 text-center">
       <h3 class="margin">Who Am I?</h3>
       <img src="https://www.w3schools.com/bootstrap/bird.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
