--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ var sticky = navbar.offsetTop;
 // Add the sticky class to the navbar when you reach its scroll position. Remove "sticky" when you leave the scroll position
 function myFunction() {
   if (window.pageYOffset >= sticky) {
-    navbar.classList.add("sticky")
+    navbar.classList.add("sticky");
     document.getElementById("demo").innerHTML = "sticky_added";
   } else {
     navbar.classList.remove("sticky");
