--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-            <span class="icon-bar"></span>                        
+            <span class="icon-bar"></span>    
+            <span class="icon-bar"></span> 
           </button>
           <a class="navbar-brand" href="https://www.w3schools.com/bootstrap/bird.jpg">Me</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="javascript:void(0)">WHO</a></li>
-            <li><a href="javascript:void(0)">WHAT</a></li>
-            <li><a href="javascript:void(0)">WHERE</a></li>
+            <li><a href="#Who_Am_I?">WHO</a></li>
+            <li><a href="#What_Am_I?)">WHAT</a></li>
+            <li><a href="#Where_To_Find_Me?">WHERE</a></li>
+            <li><a href="#Dinamisks_HTML">Dinamisks HTML</a></li>
           </ul>
         </div>
       </div>
@@ -40,6 +42,7 @@
 <div class="content" id="content">
     <div class="container-fluid bg-1 text-center">
       <h3 class="margin">Who Am I?</h3>
+      <p><a name="Who_Am_I?"></a></p>
       <img src="https://www.w3schools.com/bootstrap/bird.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
       <h3>I'm an adventurer</h3>
     </div>
@@ -47,6 +50,7 @@
     <!-- Second Container -->
     <div class="container-fluid bg-2 text-center">
       <h3 class="margin">What Am I?</h3>
+      <p><a name="What_Am_I?"></a></p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       <a href="#" class="btn btn-default btn-lg">
         <span class="glyphicon glyphicon-search"></span> Search
@@ -54,8 +58,9 @@
     </div>
 
     <!-- Third Container (Grid) -->
-    <div class="container-fluid bg-3 text-center">    
+    <div class="container-fluid bg-3 text-center">
       <h3 class="margin">Where To Find Me?</h3><br>
+      <p><a name="Where_To_Find_Me?"></a></p>
       <div class="row">
         <div class="col-sm-4">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -71,7 +76,11 @@
         </div>
       </div>
     </div>
-
+    
+    <div class="container-fluid bg-2 text-center" id="dinamisks">
+        <h3 class="Margin">Dinamisks HTML</h3>
+        <p><a name="Dinamisks_HTML"></a></p>
+    </div>
     <!-- Footer -->
     <footer class="container-fluid bg-4 text-center">
       <p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p> 
