--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
     <div class="container-fluid bg-2 text-center" id="dinamisks">
         <h3 class="Margin">Dinamisks HTML</h3>
         <p><a name="Dinamisks_HTML"></a></p>
+        <form>
+            <p>Izvēlies laukuma izmēru <input 
+                    name="cik" type="number" min="2" max="6" step="2" ></p>
+            <input type="button" onclick="laukums(cik.value);" value="Ģenerēt laukumu">
+        </form>
     </div>
     <!-- Footer -->
     <footer class="container-fluid bg-4 text-center">
@@ -105,6 +110,13 @@ function myFunction() {
     navbar.classList.remove("sticky");
   }
 }
+
+function laukums(n) {
+    let p=Document.createElement("P");
+    p.innerHTML = "Te būs laukums ar " +n+ " lauciņiem";
+    document.getElementById("dinamisks").appendChild(p);
+}
+
 </script>
 
 </body>
