--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <form>
             <p>Izvēlies laukuma izmēru <input 
                     name="cik" type="number" min="2" max="6" step="2" ></p>
-            <input type="button" onclick="laukums(cik.value)" value="Ģenerēt laukumu">
+            <button onclick="laukums(cik.value)" value="Ģenerēt laukumu">
         </form>
     </div>
     <!-- Footer -->
