--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
         <h3 class="Margin">Dinamisks HTML</h3>
         <p><a name="Dinamisks_HTML"></a></p>
         <form>
-            <p>Izvēlies laukuma izmēru <input 
-                    name="cik" type="number" min="2" max="6" step="2" ></p>
+            <p>Izvēlies laukuma izmēru <input name="cik" type="number" min="2" max="6" step="2" ></p>
             <input type="button" onclick="laukums(cik.value)" value="Ģenerēt laukumu">
         </form>
     </div>
