--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ function myFunction() {
 
 function laukums(n) {
     document.getElementById("demo").innerHTML = "new_text";
-    let p=Document.createElement("P");
+    var p=Document.createElement("P");
     p.innerHTML = "Te būs laukums ar " +n+ " lauciņiem";
     document.getElementById("dinamisks").appendChild(p);
 }
