--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@ function myFunction() {
 
 function laukums(n) {
     document.getElementById("demo").innerHTML = "new_text " +n;
-    var para=Document.createElement("P");
-    para.innerHTML = "Te būs laukums ar " +n+ " lauciņiem";
-    document.getElementById("dinamisks").appendChild(para);
+    let p=Document.createElement("P");
+    p.innerHTML = "Te būs laukums ar " +n+ " lauciņiem";
+    document.getElementById("dinamisks").appendChild(p);
 }
 
 </script>
