--- a/index.html
+++ b/index.html
@@ -15,29 +15,27 @@
 <body>
 
 <!-- Navbar -->
-<div id="navbar">
-    <nav class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header" id="myNavbar"  >
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>    
-            <span class="icon-bar"></span> 
-          </button>
-          <a class="navbar-brand" href="https://www.w3schools.com/bootstrap/bird.jpg">Me</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#Who_Am_I?">WHO</a></li>
-            <li><a href="#What_Am_I?)">WHAT</a></li>
-            <li><a href="#Where_To_Find_Me?">WHERE</a></li>
-            <li><a href="#Dinamisks_HTML">Dinamisks HTML</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-</div>
+<nav class="navbar navbar-default" id="navbar">
+  <div class="container">
+    <div class="navbar-header" id="myNavbar"  >
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>    
+        <span class="icon-bar"></span> 
+      </button>
+      <a class="navbar-brand" href="https://www.w3schools.com/bootstrap/bird.jpg">Me</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#Who_Am_I?">WHO</a></li>
+        <li><a href="#What_Am_I?)">WHAT</a></li>
+        <li><a href="#Where_To_Find_Me?">WHERE</a></li>
+        <li><a href="#Dinamisks_HTML">Dinamisks HTML</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <!-- First Container -->
 <div class="content" id="content">
     <div class="container-fluid bg-1 text-center">
