--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#Who_Am_I?">WHO</a></li>
+          <li><a href="#Gradient">Gradient</a></li>
         <li><a href="#What_Am_I?)">WHAT</a></li>
         <li><a href="#Where_To_Find_Me?">WHERE</a></li>
         <li><a href="#Dinamisks_HTML">Dinamisks HTML</a></li>
@@ -38,11 +38,15 @@
 </nav>
 <!-- First Container -->
 <div class="content" id="content">
-    <div class="container-fluid bg-1 text-center">
-      <p><a name="Who_Am_I?"></a></p>
-      <h3 class="margin">Who Am I?</h3>
-      <img src="https://www.w3schools.com/bootstrap/bird.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-      <h3>I'm an adventurer</h3>
+    <div class="my_gradient">
+      <p><a name="Gradient"></a></p>
+      <h3 class="margin">A beautiful gradient</h3>
+      <p><code> .my_gradient{ <br>
+              background: linear-gradient(to right,#000,#0575e6); <br>
+              text-align: center;<br>
+              }      <br>
+          </code></p>
+      <p><a name="https://catswhocode.com/css-tricks/">link to source</a></p>
     </div>
 
     <!-- Second Container -->
