--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </nav>
 <!-- First Container -->
 <div class="content" id="content">
-    <div class="my_gradient">
+    <div class="my_gradient container-fluid">
       <p><a name="Gradient"></a></p>
       <h3 class="margin">A beautiful gradient</h3>
       <p><code> .my_gradient{ <br>
