--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               text-align: center;<br>
               }      <br>
           </code></p>
-      <p><a name="https://catswhocode.com/css-tricks/">link to source</a></p>
+      <p><a href="https://catswhocode.com/css-tricks/" target="_blank">link to source</a></p>
     </div>
 
     <!-- Second Container -->
