--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
     <div class="my_gradient container-fluid">
       <p><a name="Gradient"></a></p>
       <h3 class="margin">A beautiful gradient</h3>
+      <h3 class="margin">Code:</h3>
       <p><code> .my_gradient{ <br>
-              <pre>           background: linear-gradient(to right,#000,#0575e6); </pre><br>
-              <pre>           text-align: center;</pre><br>
-              <pre>          }     </pre> <br>
+              background: linear-gradient(to right,#000,#0575e6); <br>
+              text-align: center;<br>
+              }      <br>
           </code></p>
       <p><a href="https://catswhocode.com/css-tricks/" target="_blank">link to source</a></p>
     </div>
