--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
           <li><a href="#Gradient">Gradient</a></li>
-        <li><a href="#What_Am_I?)">WHAT</a></li>
+        <li><a href="#Truncate">Truncate</a></li>
         <li><a href="#Where_To_Find_Me?">WHERE</a></li>
         <li><a href="#Dinamisks_HTML">Dinamisks HTML</a></li>
       </ul>
@@ -51,13 +51,22 @@
     </div>
 
     <!-- Second Container -->
-    <div class="container-fluid bg-2 text-center">
-      <p><a name="What_Am_I?"></a></p>
-      <h3 class="margin">What Am I?</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-      <a href="#" class="btn btn-default btn-lg">
-        <span class="glyphicon glyphicon-search"></span> Search
-      </a>
+    <div class="container-fluid bg-2 text-center truncate">
+      <p><a name="Truncate"></a></p>
+      <h3 class="margin">Truncate</h3>
+      <p><h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
+          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+          ea commodo consequat. </h4></p>
+          <p><code> .truncate h4 { <br>
+  width:200px;<br>
+  white-space: nowrap;<br>
+  overflow: hidden;<br>
+  text-overflow: ellipsis;  <br>
+  resize:horizontal;<br>
+  padding: 20px;<br>
+} <br>
+          </code> </p>
     </div>
 
     <!-- Third Container (Grid) -->
