--- a/index.html
+++ b/index.html
@@ -55,12 +55,10 @@
       <p><a name="Truncate"></a></p>
       <h3 class="margin">Truncate</h3>
       <p><h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
-          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-          ea commodo consequat. </h4></p>
+          tempor incididunt ut labore et dolore magna aliqua. </h4></p>
           <p><code> .truncate h4 { <br>
-  width:200px;<br>
-  white-space: nowrap;<br>
+  width:200px;
+  white-space: nowrap;
   overflow: hidden;<br>
   text-overflow: ellipsis;  <br>
   resize:horizontal;<br>
