--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               text-align: center;<br>
               }      <br>
           </code></p>
-      <p><a href="https://catswhocode.com/css-tricks/" target="_blank">link to source</a></p>
+      <p><a href="https://catswhocode.com/css-tricks/#gradients-and-gradient-text" target="_blank">link to source</a></p>
     </div>
 
     <!-- Second Container -->
@@ -63,8 +63,10 @@
   text-overflow: ellipsis;  <br>
   resize:horizontal;<br>
   padding: 20px;<br>
+  background: white;<br>
 } <br>
           </code> </p>
+          <p><a href="https://catswhocode.com/css-tricks/#truncate-strings-in-css" target="_blank">link to source</a></p>
     </div>
 
     <!-- Third Container (Grid) -->
