--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <div class="container-fluid bg-2 text-center truncate">
       <p><a name="Truncate"></a></p>
       <h3 class="margin">Truncate</h3>
-      <p><h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-          tempor incididunt ut labore et dolore magna aliqua. </h4></p>
+      <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+          tempor incididunt ut labore et dolore magna aliqua. </h4>
           <p><code> .truncate h4 { <br>
   width:200px;
   white-space: nowrap;
