--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <ul class="nav navbar-nav navbar-right">
           <li><a href="#Gradient">Gradient</a></li>
         <li><a href="#Truncate">Truncate</a></li>
-        <li><a href="#Where_To_Find_Me?">WHERE</a></li>
+        <li><a href="#Filter">Filter</a></li>
         <li><a href="#Dinamisks_HTML">Dinamisks HTML</a></li>
       </ul>
     </div>
@@ -71,23 +71,34 @@
 
     <!-- Third Container (Grid) -->
     <div class="container-fluid bg-3 text-center">
-      <p><a name="Where_To_Find_Me?"></a></p>
-      <h3 class="margin">Where To Find Me?</h3><br>
+      <p><a name="Filter"></a></p>
+      <h3 class="margin">Image filters</h3><br>
       <div class="row">
         <div class="col-sm-4">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <img src="https://www.w3schools.com/bootstrap/birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+            <p><code>#img1 { <br>
+  filter: grayscale(100%);<br>
+}<br>
+                </code></p>
+          <img src="https://www.w3schools.com/bootstrap/birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image" id="img1">
         </div>
         <div class="col-sm-4"> 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <img src="https://www.w3schools.com/bootstrap/birds2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+                    <p><code>#img2 {<br>
+  filter: blur(5px);<br>
+}<br>
+                </code></p>
+          <img src="https://www.w3schools.com/bootstrap/birds2.jpg" class="img-responsive margin" style="width:100%" alt="Image" id="img2">
         </div>
         <div class="col-sm-4"> 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <img src="https://www.w3schools.com/bootstrap/birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+          <p><code>#img3 {<br>
+  filter: hue-rotate(180deg);<br>
+}<br>
+              </code></p>
+          <img src="https://www.w3schools.com/bootstrap/birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image" id="img3">
         </div>
       </div>
+      <p><a href="https://www.blog.duomly.com/12-css-tips-and-tricks-which-help-you-to-create-an-amazing-websites/#8-image-filters" target="_blank">link to source</a></p>
     </div>
+    
     
     <div class="container-fluid bg-2 text-center" id="dinamisks">
         <h3 class="Margin">Dinamisks HTML</h3>
