--- a/index.html
+++ b/index.html
@@ -75,25 +75,25 @@
       <h3 class="margin">Image filters</h3><br>
       <div class="row">
         <div class="col-sm-4">
-            <p><code>#img1 { <br>
-  filter: grayscale(100%);<br>
-}<br>
-                </code></p>
-          <img src="https://www.w3schools.com/bootstrap/birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image" id="img1">
-        </div>
-        <div class="col-sm-4"> 
-                    <p><code>#img2 {<br>
+            <p><code>.blur { <br>
   filter: blur(5px);<br>
 }<br>
                 </code></p>
-          <img src="https://www.w3schools.com/bootstrap/birds2.jpg" class="img-responsive margin" style="width:100%" alt="Image" id="img2">
+          <img src="https://www.w3schools.com/bootstrap/birds1.jpg" class="img-responsive margin blur" style="width:100%" alt="Image">
         </div>
         <div class="col-sm-4"> 
-          <p><code>#img3 {<br>
+                    <p><code>.grayscale {<br>
+  filter: grayscale(100%);<br>
+}<br>
+                </code></p>
+          <img src="https://www.w3schools.com/bootstrap/birds2.jpg" class="img-responsive margin grayscale" style="width:100%" alt="Image">
+        </div>
+        <div class="col-sm-4"> 
+          <p><code>.huerotate {<br>
   filter: hue-rotate(180deg);<br>
 }<br>
               </code></p>
-          <img src="https://www.w3schools.com/bootstrap/birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image" id="img3">
+          <img src="https://www.w3schools.com/bootstrap/birds3.jpg" class="img-responsive margin huerotate" style="width:100%" alt="Image">
         </div>
       </div>
       <p><a href="https://www.blog.duomly.com/12-css-tips-and-tricks-which-help-you-to-create-an-amazing-websites/#8-image-filters" target="_blank">link to source</a></p>
