--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <ul class="nav navbar-nav navbar-right">
           <li><a href="#Gradient">Gradient</a></li>
         <li><a href="#Truncate">Truncate</a></li>
-        <li><a href="#Filter">Filter</a></li>
+        <li><a href="#Filter">Filters</a></li>
         <li><a href="#Dinamisks_HTML">Dinamisks HTML</a></li>
       </ul>
     </div>
@@ -75,18 +75,15 @@
       <h3 class="margin">Image filters</h3><br>
       <div class="row">
         <div class="col-sm-4">
-            <p><code>.blur { <br>
+            <p><h4 class="margin">Original image</h3></p>
+          <img src="https://www.w3schools.com/bootstrap/birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+        </div>
+        <div class="col-sm-4"> 
+                    <p><code>.blur { <br>
   filter: blur(5px);<br>
 }<br>
                 </code></p>
-          <img src="https://www.w3schools.com/bootstrap/birds1.jpg" class="img-responsive margin blur" style="width:100%" alt="Image">
-        </div>
-        <div class="col-sm-4"> 
-                    <p><code>.grayscale {<br>
-  filter: grayscale(100%);<br>
-}<br>
-                </code></p>
-          <img src="https://www.w3schools.com/bootstrap/birds2.jpg" class="img-responsive margin grayscale" style="width:100%" alt="Image">
+          <img src="https://www.w3schools.com/bootstrap/birds3.jpg" class="img-responsive margin blur" style="width:100%" alt="Image">
         </div>
         <div class="col-sm-4"> 
           <p><code>.huerotate {<br>
