--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <h3 class="margin">Image filters</h3><br>
       <div class="row">
         <div class="col-sm-4">
-            <p><h5 class="margin">Original image</h5></p><br>
+            <h4 class="margin">Original image</h4><br>
           <img src="https://www.w3schools.com/bootstrap/birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
         </div>
         <div class="col-sm-4"> 
