--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <!-- Third Container (Grid) -->
     <div class="container-fluid bg-3 text-center">
       <p><a name="Filter"></a></p>
-      <h3 class="margin">Image filters</h3><br>
+      <h7 class="margin">Image filters</h7><br><br>
       <div class="row">
         <div class="col-sm-4">
             <p class="margin-bottom-400">Original image</p><br>
