--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ function myFunction() {
 
 function laukums(n) {
     document.getElementById("demo").innerHTML = "new_text " +n;
-    let p=Document.createElement("P");
+    let p=document.createElement("P");
     p.innerHTML = "Te būs laukums ar " +n+ " lauciņiem";
     document.getElementById("dinamisks").appendChild(p);
 }
