--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
             <p>Izvēlies laukuma izmēru <input name="cik" type="number" min="2" max="6" step="2" ></p>
             <input type="button" onclick="laukums(cik.value)" value="Ģenerēt laukumu">
         </form>
-        <p id="demo">Text on start</p>
     </div>
     <!-- Footer -->
     <footer class="container-fluid bg-4 text-center">
@@ -132,9 +131,10 @@ function myFunction() {
 }
 
 function laukums(n) {
-    document.getElementById("demo").innerHTML = "new_text " +n;
     let table=document.createElement("TABLE");
     table.setAttribute('border', '1');
+    table.setAttribute('margin-left', 'auto');
+    table.setAttribute('margin-right', 'auto');
     let num = 1;
     for (let i = 0;i<n;i++) {
         let tr = document.createElement('TR');
