--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@ function laukums(n) {
         }
         table.appendChild(tr);
     }
+    let br=document.createElement("BR");
+    document.getElementById("br").appendChild(table);
     document.getElementById("dinamisks").appendChild(table);
 }
 
